--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": "stylelint-config-standard",
-  "rules": {
-    "indentation": [2, { "severity": "warning" }],
-    "number-leading-zero": ["always", { "severity": "warning" }],
-    "color-no-invalid-hex": [true, { "severity": "error" }]
-  }
+
+  "extends": ["stylelint-config-standard"]
 }
+
