--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ test:
   stage: test
   image: node:latest
   before_script:
-    - npm install -g stylelint
+    - npm install -g stylelint stylelint-config-standard
   script:
     - stylelint "src/css/*.css"
 security:
