Mettre à jour le fichier .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ test:
     - stylelint "src/css/*.css"
 security:
   stage: security
-  image: owasp/zap2docker-stable
+  image: owasp/zap
   script:
     - zap-baseline.py -t http://localhost:8080
 
