--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ test:
 
 security:
   stage: security
-  image: owasp/zap2docker-stable
+  image: owasp/zap:latest
   script:
     - zap-baseline.py -t http://localhost:8080
 
