Correction du pipeline de sécurité avec ZAP sur Windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,10 +32,12 @@ security:
   image: debian:latest
   before_script:
     - echo "Installation des dépendances"
-    - apt-get update && apt-get install -y wget unzip
+    - apt-get update && apt-get install -y wget unzip  openjdk-21-jdk
     - echo "Téléchargement et installation de ZAP"
     - wget -O ZAP_Linux.tar.gz https://github.com/zaproxy/zaproxy/releases/download/v2.15.0/ZAP_2.15.0_Linux.tar.gz
     - mkdir -p /opt/zap && tar -xvzf ZAP_Linux.tar.gz -C /opt/zap --strip-components=1
+    - echo "Java Version :"
+    - java -version
   script:
     - echo "Exécution de ZAP pour analyser l'application"
     - /opt/zap/zap.sh -cmd -quickurl "http://localhost:8000" -quickout "/opt/zap/zap_report.html"
