Correction du pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ quality:
   stage: quality
   script:
     - echo "Contrôle qualité terminé"
-deploy:
+pages:
   stage: deploy
   script:
     - mkdir public
