--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,6 @@ jobs:
           /opt/zap/zap.sh -cmd -quickurl "http://localhost:8000" -quickout "/opt/zap/zap_report.html"
 
   package:
-
     runs-on: ubuntu-latest
     needs: security
     steps:
@@ -82,10 +81,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write  # ✅ Ajout des permissions nécessaires
+    needs: package
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -96,12 +92,7 @@ jobs:
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: src/  # 📌 Vérifie que c'est bien le bon dossier contenant HTML/CSS/JS
+          path: src/  # 📌 Ton dossier contenant HTML/CSS/JS
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-
-        with:
-      - name: public
-        path: public
-
