--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write  # ✅ Ajout de la permission pour GitHub Pages
+
 jobs:
   validate:
     runs-on: ubuntu-latest
